<resources>
    <string name="app_name">User Profile</string>
    <string name="tvNom">Name:</string>
    <string name="tvCognom">Surname:</string>
    <string name="tvDataNac">Birth Date:</string>
    <string name="tvDireccio">Adress:</string>
    <string name="tvLabMail">Email:</string>
    <string name="tvWebSite">Web Site:</string>
    <string name="tvCif">Cif:</string>
    <string name="tvlblUser">User Name:</string>
    <string name="lblChangePass">Change Password</string>
    <string name="lblYourPass">Your Password:</string>
    <string name="lblnewPass">New Password:</string>
    <string name="lblRepitPass">Repeat New Password:</string>
    <string name="lblSavePass">Save Changes</string>
    <string name="frg01">PERSONAL</string>
    <string name="frg02">PROFESIONAL</string>
    <string name="frg03">ACCESs</string>
    <string name="toastOk" >Password changed!!</string>
    <string name="toastNew">The new passwords do not match</string>
    <string name="toastRepeat">Wrong current password</string>
</resources>
